# EditorAI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Pulls.md  README.md  about.md  changelog.md  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: multi-platform.yml
resources/: example_sections.json  gdcs_design.txt  object_ids.json
resources/example_levels/: Acid_Factory.jsonc  Adrift.jsonc  Almighty.jsonc  Amplification.jsonc  Anubis.jsonc  Aquarius.jsonc  B.jsonc  Back_on_Track_RM.jsonc  Battletown.jsonc  Beast_Mode_Full.jsonc  Bloodbath.jsonc  Bloodlust.jsonc  Bright_Eclipse.jsonc  Carnation.jsonc  Cataclysm.jsonc  Chambers.jsonc  Change_of_Scene.jsonc  Citrus.jsonc  ColorZ.jsonc  Colorblind.jsonc  Crazy_Ball.jsonc  Crazy_time.jsonc  Danger_Zone.jsonc  Dark_Paradise.jsonc  Daylight.jsonc  DeCode.jsonc  Dear_Nostalgists.jsonc  Death_Moon_.jsonc  Drippy_Dub.jsonc  Dry_Out_RM.jsonc  Easy_.jsonc  ElectroWorld.jsonc  End_Of_Line.jsonc  Extinction.jsonc  Fear_zone.jsonc  Fernanfloo_3_.jsonc  First_Race.jsonc  Flappy_Jumper_2.jsonc  Frontline_Full.jsonc  Future_Funk.jsonc  (+86 more)
src/: filter.hpp  main.cpp  overlay.cpp  sessions.hpp
